--- a/11170480_DCIT205/Faq.css
+++ b/11170480_DCIT205/Faq.css
@@ -52,23 +52,10 @@ p{
     line-height: 60px;
     margin: 25px 0;
 }
-.btn{
-    display: inline-block;
-    background: #3b86ff;
-    color: #fff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
-}
-.btn:hover{
-    background: #51360f;
-}
-.header{
-    background-color: rgb(0, 195, 255);
-}
+
+
 .container{
-    background-color: rgb(0, 195, 255);
+    background-color: aliceblue;
 }
 .header .row{
     margin-top: 70px;
@@ -107,3 +94,40 @@ p{
     line-height: 60px;
     color: #555;
 }
+.footer{ 
+    padding: 0rem 3%; 
+    width: 100%; 
+    background-color: black;
+} 
+.main-footer{ 
+    display: flex; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    gap: 2.5rem; 
+} 
+.footer-inner-content{ 
+    flex: 1 1 280px; 
+    padding: 1rem; 
+} 
+.footer-inner-content h2{ 
+    color: white; 
+    font-size: 20px;   
+    padding: 2rem 0; 
+} 
+.footer-inner-content p{ 
+    color: white; 
+    font-size: 0.75rem; 
+    margin: 1rem 0; 
+} 
+.footer-inner-content a{ 
+    text-decoration: none; 
+    display: block; 
+    color: white; 
+    font-size: 2.5rem; 
+    margin: 0.5rem 0; 
+}
+
+
+
+
+
