--- a/11170480_DCIT205/about.css
+++ b/11170480_DCIT205/about.css
@@ -65,11 +65,11 @@ p{
     background: #51360f;
 }
 .header{
-    background-color: rgb(0, 195, 255);
+    background-color: aliceblue;
    
 }
 .container{
-    background-color: rgb(0, 195, 255);
+    background-color: aliceblue;
 }
 .header .row{
     margin-top: 70px;
@@ -77,30 +77,7 @@ p{
 .categories{
     margin: 70px 0;
 }
-.col-3{
-    flex-basis: 30%;
-    min-width: 250px;
-    margin-bottom: 30px;
-}
-.col-3 img{
-    width: 100%;
-}
-.small-container{
-    max-width: 1080px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-.col-4{
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200px;
-    margin-bottom: 50px;
-    transition: transform 0.5s;
-}
-.col-4 img{
-    width: 100%;
-}
+
 .title{
     text-align: center;
     margin: 0;
@@ -112,8 +89,98 @@ p{
 .center-align {
     text-align: center;
     font-size: large;
+    line-height: 1.6;
   }
   .center-heading {
     text-align: center;
     font-size:xx-large;
+    line-height: 1.5;
   }
+  .containerrr{
+    width: 70%;
+    max-width: 500px;
+    margin: 20px auto;
+    background-color: #fff; 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px;
+    float:inline-start; 
+}
+.secondary-container{
+    width: 70%;
+    max-width: 500px;
+    margin: 20px auto;
+    background-color: #fff; 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 20px; 
+    float: right;  
+}
+.thirdly-container{
+    width: 70%;
+    max-width: 500px;
+   margin: auto;
+   background-color: #fff; 
+   border-radius: 10px; 
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+   float: left;
+   padding: 20px;} 
+
+
+   #myBtn {
+    position: fixed;
+    bottom: 10px;
+    float: right;
+    right: 18.5%;
+    left: 77.25%;
+    max-width: 70px;
+    width: 100%;
+    font-size: 12px;
+    border-color: rgba(85, 85, 85, 0.2);
+    background-color:rgb(0, 162, 255);
+    padding: .5px;
+    border-radius: 4px;
+
+}
+/*On Hover Color Change*/
+#myBtn:hover {
+    background-color: #7dbbf1;
+}
+.footer{ 
+    padding: 0rem 3%; 
+    width: 100%; 
+    background-color: black;
+} 
+.main-footer{ 
+    display: flex; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    gap: 2.5rem; 
+} 
+.footer-inner-content{ 
+    flex: 1 1 280px; 
+    padding: 1rem; 
+} 
+.footer-inner-content h2{ 
+    color: white; 
+    font-size: 20px;   
+    padding: 2rem 0; 
+} 
+.footer-inner-content p{ 
+    color: white; 
+    font-size: 0.75rem; 
+    margin: 1rem 0; 
+} 
+.footer-inner-content a{ 
+    text-decoration: none; 
+    display: block; 
+    color: white; 
+    font-size: 2.5rem; 
+    margin: 0.5rem 0; 
+}
+
+
+
+
+
+
