--- a/11170480_DCIT205/style.css
+++ b/11170480_DCIT205/style.css
@@ -27,17 +27,61 @@ a{
 p{
     color: #555;
 }
-.container{
-    max-width: 1300px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
+
+
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+  
 .row{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.main-feautred{ 
+    display: flex; 
+    justify-content: center; 
+    flex-wrap: wrap; 
+    gap: 2rem; 
+} 
+ 
+ 
+.innter-featred{ 
+    flex: 1 1 300px; 
+    position: relative; 
+    overflow: hidden; 
+} 
+ 
+ 
+.feature-image img{ 
+    width: 100%; 
+    padding: 1rem; 
 }
 .col-2{
     flex-basis: 50%;
@@ -65,7 +109,7 @@ p{
     background: #51360f;
 }
 .header{
-    background-color: rgb(0, 195, 255);
+    background-color: aliceblue;
 }
 .header .row{
     margin-top: 70px;
@@ -154,55 +198,48 @@ transition: transform 0.5s;
 
 /*-----------footer ---------------*/
 
-.footer{
-    background: #000;
-    color: #8a8a8a;
-    font-size: 14px;
-    padding: 60px 0 20px;
-}
-.footer p{
-    color: #8a8a8a;
-}
-.footer h3{
-    color: #fff;
-    margin-bottom: 20px;
-}
-.footer-c0l-1, .footer-col-2, .footer-col-3, .footer-col-4{
-    min-width: 250px;
-    margin-bottom: 20px;
-}
-.footer-col-1{
-    flex-basis: 30%;
-}
-.footer-col-2{
-    flex: 1;
-    text-align: center;
-}
-.footer-col-2 img{
-    width: 180px;
-    margin-bottom: 20px;
-}
-.footer-col-3, .footer-col-4{
-    flex-basis: 12%;
-    text-align: center;
-}
-ul{
-    list-style-type: none;
+.footer{ 
+    padding: 0rem 3%; 
+    width: 100%; 
+    background-color: black;
+} 
+.main-footer{ 
+    display: flex; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    gap: 2.5rem; 
+} 
+.footer-inner-content{ 
+    flex: 1 1 280px; 
+    padding: 1rem; 
+} 
+.footer-inner-content h2{ 
+    color: white; 
+    font-size: 20px;   
+    padding: 2rem 0; 
+} 
+.footer-inner-content p{ 
+    color: white; 
+    font-size: 0.75rem; 
+    margin: 1rem 0; 
+} 
+.footer-inner-content a{ 
+    text-decoration: none; 
+    display: block; 
+    color: white; 
+    font-size: 2.5rem; 
+    margin: 0.5rem 0; 
 }
 
-.footer hr{
-    border: none;
-    background: #b5b5b5;
-    height: 1px;
-    margin: 20px 0;
-}
-.copyright{
-    text-align: center;
-}
-.menu-icon{
-    width: 28px;
-    margin-left: 20px;
-    display: none;
+
+@media (max-width: 768px) {
+    section {
+        flex-direction: column;
+    }
+
+    .course {
+        width: 100%;
+    }
 }
 /*----------------- media query for menu ----------*/
 
@@ -256,3 +293,7 @@ ul{
     }
     }
     
+    
+    
+    
+           
