--- a/11170480_DCIT205/faculty.css
+++ b/11170480_DCIT205/faculty.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .navbar{
     display: flex;
@@ -76,6 +77,18 @@ body {
   *, *:before, *:after {
     box-sizing: inherit;
   }
+  .btn{
+    display: inline-block;
+    background: #3b86ff;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #51360f;
+}
   
   .column {
     float: left;
