--- a/11170480_DCIT205/forms.css
+++ b/11170480_DCIT205/forms.css
@@ -4,6 +4,7 @@ form {
     padding: 10px 20px;
     background: #f4f7f8;
     border-radius: 8px;
+    font-family:Arial, Helvetica, sans-serif;
   }
 
   input[type="text"],
