--- a/11170480_DCIT205/style.css
+++ b/11170480_DCIT205/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .navbar{
     display: flex;
@@ -165,6 +166,7 @@ p{
 /*-------------- testimonial -------------*/
 .testimonial{
     padding-top: 100px;
+    background-color: white;
 }
 .testimonial .col-3{
 text-align: center;
@@ -192,7 +194,7 @@ transition: transform 0.5s;
 }
 .testimonial .col-3 h3{
     font-weight: 600;
-    color: #555;
+    color: black;
     font-size: 16px;
 }
 
