--- a/11170480_DCIT205/activities.css
+++ b/11170480_DCIT205/activities.css
@@ -66,56 +66,151 @@ a{
     margin-top: 70px;
 }
 
-
-.container{
-    width: 70%;
-    max-width: 500px;
-    margin: 20px auto;
-    background-color: #fff; 
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    padding: 20px;
-    float:right; 
+.news-section {
+    margin: 6% auto;
 }
 
-.container1{
-    width: 70%;
-    max-width: 500px;
-    margin: 50px auto;
-    background-color: #fff; 
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    padding: 20px;
-    margin-left: 20px; /* Adjust the value as needed to move the container to the left */
-    }
+.news-section-image {
+    width: 40rem;
+    border-radius: 5%;
+}
 
+.news-section-content {
+    display: flex;
+    justify-content: space-between;
+}
 
-.container2{
-        width: 70%;
-        max-width: 500px;
-        margin: 50px auto;
-        background-color: #fff; 
-        border-radius: 10px; 
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-        padding: 20px;
-        
-       margin-left: 20px;
-    }
+.news-section-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
 
-.container3{
-                width: 70%;
-                max-width: 500px;
-                margin: 50px auto;
-                background-color: #fff; 
-                border-radius: 10px; 
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-                padding: 20px;
-                margin-top: auto;
-                    margin-right: 20px;
-                    position: relative;
-                    margin-top: -60%;
-    
-                }
+.news-section-text h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+}
+
+.news-section-text p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+}
+
+.underlined-header {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2.8rem;
+    padding-bottom: 20px;
+    border-bottom: 2px solid #000;
+    margin: 40px auto;
+}
+
+.news-section1 {
+    margin: 6% auto;
+}
+
+.news-section-image1 {
+    width: 40rem;
+    border-radius: 5%;
+}
+
+.news-section-content1 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.news-section-text1 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+.news-section-text1 h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+}
+
+.news-section-text1 p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+}
+
+.news-section2 {
+    margin: 20% auto;
+}
+
+.news-section-image2 {
+    width: 40rem;
+    border-radius: 5%;
+}
+
+.news-section-content2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10%;
+}
+
+.news-section-text2 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+.news-section-text2 h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+}
+
+.news-section-text2 p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+}
+
+.news-section3 {
+    margin: 20% auto;
+}
+
+.news-section-image3 {
+    width: 40rem;
+    border-radius: 5%;
+}
+
+.news-section-content3 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10%;
+}
+
+.news-section-text3 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+}
+
+.news-section-text3 h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+}
+
+.news-section-text3 p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+}
 
 
                 .footer{ 
