--- a/11170480_DCIT205/student.css
+++ b/11170480_DCIT205/student.css
@@ -110,25 +110,139 @@ p{
 .text{
     text-align:center;
 }
-
-section {
+.news-section {
+    margin: 6% auto;
+  }
+  
+  .news-section-image {
+    width: 40rem;
+  }
+  
+  .news-section-content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #f0f0f0;
-}
+  }
+  
+  .news-section-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  
+  .news-section-text h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+  }
+  
+  .news-section-text p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+  }
+  
+  .news-section1 {
+    margin: 6% auto;
+  }
+  
+  .news-section-image {
+    width: 40rem;
+  }
+  
+  .news-section-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .news-section-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  
+  .news-section-text h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+  }
+  
+  .news-section-text p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+  }
+  
+  .news-section {
+    margin: 6% auto;
+  }
+  
+  .news-section-image {
+    width: 40rem;
+  }
+  
+  .news-section-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .news-section-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  
+  .news-section-text h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+  }
+  
+  .news-section-text p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+  }
+  
+  .news-section {
+    margin: 6% auto;
+  }
+  
+  .news-section-image {
+    width: 40rem;
+  }
+  
+  .news-section-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .news-section-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  
+  .news-section-text h5 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-size: 2rem;
+    width: 80%;
+    line-height: 3rem;
+  }
+  
+  .news-section-text p {
+    font-family: 'Kumbh San', sans-serif;
+    font-size: 1rem;
+    width: 80%;
+    line-height: 30px;
+  }
 
-.shortcourse {
-    width: 45%;
-    margin: 10px;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    overflow: hidden;
-    font-family: 'Times New Roman', Times, serif;
-}
+
 
 
 .course img {
